# LOGFORGE-CPP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Sanitizers.cmake
include/logforge/: aggregator.hpp  buffered_reader.hpp  log_entry.hpp  parser.hpp  parser_nginx.hpp  report_writer.hpp
scripts/: benchmark.sh  gen_synth_log.py
src/: aggregator.cpp  buffered_reader.cpp  main.cpp  parser_nginx.cpp  report_csv.cpp  report_json.cpp
tests/: CMakeLists.txt  test_aggregator.cpp  test_parser.cpp
